--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,7 @@ authors = [
     ]
     
 [build-system]
-requires = ["setuptools", "wheel", "scikit-build>=0.13", "cmake>=3.15", "pybind11"]
+requires = ["setuptools", "wheel", "scikit-build>=0.13", "cmake>=3.15", "pybind11[global]"]
 
 [tool.scikit-build]
 wheel.expand-macos-universal-tags = true
