--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -75,7 +75,7 @@ jobs:
     steps:
     - uses: actions/setup-python@v5
       with:
-        python-version: "3.x"
+        python-version: ["3.8", "3.9", "3.10", "3.11", "3.12", "3.13"]
 
     - uses: actions/download-artifact@v4
       with:
