--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,9 @@ authors = [
 [build-system]
 requires = ["setuptools", "wheel", "scikit-build>=0.13", "cmake>=3.15", "pybind11[global]"]
 
+[tool.cibuildwheel]
+archs = "x86_64 arm64" # Build for both architectures
+
 [tool.scikit-build]
 wheel.expand-macos-universal-tags = true
 minimum-version = "build-system.requires"
