--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,35 +33,29 @@ jobs:
 
 
   build_wheels:
-    name: Wheels on ${{ matrix.os }}
     runs-on: ${{ matrix.os }}
     strategy:
-      fail-fast: false
       matrix:
-        os: [ubuntu-latest, macos-13, macos-latest, windows-latest]
+        os: [ubuntu-latest, macos-latest, windows-latest]
         python-version: ["3.8", "3.9", "3.10", "3.11", "3.12", "3.13"]
 
     steps:
-    - uses: actions/checkout@v4
-      with:
-        submodules: true
+      - uses: actions/checkout@v3
+      - name: Set up Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v4
+        with:
+          python-version: ${{ matrix.python-version }}
 
-    - uses: astral-sh/setup-uv@v4
+      - name: Build wheels
+        uses: pypa/cibuildwheel@v2.12.1
+        env:
+          CIBUILDWHEEL_BUILD: cp${{ matrix.python-version }}-*
 
-    - uses: pypa/cibuildwheel@v2.22
-      env:
-        CIBW_ENABLE: cpython-prerelease
-        CIBW_ARCHS_WINDOWS: auto ARM64
-
-    - name: Verify clean directory
-      run: git diff --exit-code
-      shell: bash
-
-    - uses: actions/upload-artifact@v4
-      with:
-        name: cibw-wheels-${{ matrix.os }}
-        path: wheelhouse/*.whl
-
+      - name: Upload wheels
+        uses: actions/upload-artifact@v3
+        with:
+          name: wheels
+          path: ./wheelhouse/*.whl
 
   upload_all:
     name: Upload if release
@@ -92,4 +86,3 @@ jobs:
     - uses: pypa/gh-action-pypi-publish@release/v1
       with:
         attestations: true
-        
