--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -38,6 +38,13 @@ jobs:
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
         python-version: ["3.8", "3.9", "3.10", "3.11", "3.12", "3.13"]
+        include:
+          - os: ubuntu-latest
+            archs: auto # or aarch64, x86_64, i686, ppc64le, s390x as needed
+          - os: macos-latest
+            archs: universal2
+          - os: windows-latest
+            archs: AMD64
 
     steps:
       - uses: actions/checkout@v3
@@ -49,7 +56,8 @@ jobs:
       - name: Build wheels
         uses: pypa/cibuildwheel@v2.12.1
         env:
-          CIBUILDWHEEL_BUILD: cp${{ matrix.python-version }}-*
+          CIBUILDWHEEL_ARCHS: ${{ matrix.archs }} # Pass archs to cibuildwheel
+          CIBUILDWHEEL_BUILD: cp${{ matrix.python-version }}-* #Optional: to build only specific python version
 
       - name: Upload wheels
         uses: actions/upload-artifact@v3
