--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -38,13 +38,6 @@ jobs:
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
         python-version: ["3.8", "3.9", "3.10", "3.11", "3.12", "3.13"]
-        include:
-          - os: ubuntu-latest
-            archs: "aarch64 x86_64"
-          - os: macos-latest
-            archs: universal2
-          - os: windows-latest
-            archs: AMD64
 
     steps:
       - uses: actions/checkout@v3
@@ -56,9 +49,11 @@ jobs:
       - name: Build wheels
         uses: pypa/cibuildwheel@v2.12.1
         env:
-          CIBUILDWHEEL_ARCHS: ${{ matrix.archs }} # Pass archs to cibuildwheel
           CIBUILDWHEEL_BUILD: cp${{ matrix.python-version }}-* #Optional: to build only specific python version
-
+          CIBW_ARCHS_LINUX: auto aarch64
+          CIBW_ARCHS_MACOS: x86_64 universal2 arm64
+          CIBW_SKIP: pp*
+          
       - name: Upload wheels
         uses: actions/upload-artifact@v3
         with:
