--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -49,7 +49,7 @@ jobs:
       - name: Build wheels
         uses: pypa/cibuildwheel@v2.12.1
         env:
-          CIBUILDWHEEL_BUILD: cp${{ matrix.python-version }}-* #Optional: to build only specific python version
+          CIBUILDWHEEL_BUILD: cp${{ matrix.python-version | replace('.', '') }}-*
           CIBW_ARCHS_LINUX: auto aarch64
           CIBW_ARCHS_MACOS: x86_64 universal2 arm64
           CIBW_SKIP: pp*
