--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,8 @@ readme = "README.md"
 authors = [
     { name = "Shizuo Kaji", email = "shizuo.kaji@gmail.com"}
     ]
-    
+requires-python = ">=3.8"
+
 [build-system]
 requires = ["scikit-build>=0.13", "cmake>=3.15"]
 
