Test: build workflow

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -50,7 +50,7 @@ jobs:
         env:
           CIBW_ARCHS_LINUX: auto aarch64
           CIBW_ARCHS_MACOS: x86_64 universal2 arm64
-          CIBW_ARCHS_WINDOWS: x86 AMD64
+          CIBW_ARCHS_WINDOWS: auto
           CIBW_SKIP: pp*
           
       - name: Upload wheels
