--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -57,7 +57,7 @@ jobs:
       - name: Upload wheels
         uses: actions/upload-artifact@v4
         with:
-          name: wheels
+          name: wheels-${{ matrix.os }}
           path: ./wheelhouse/*.whl
 
   upload_all:
@@ -80,6 +80,18 @@ jobs:
         pattern: cibw-*
         merge-multiple: true
         path: dist
+    - uses: actions/download-artifact@v4
+      with:
+        name: wheels-ubuntu-latest
+        path: dist/ubuntu
+    - uses: actions/download-artifact@v4
+      with:
+        name: wheels-macos-latest
+        path: dist/macos
+    - uses: actions/download-artifact@v4
+      with:
+        name: wheels-windows-latest
+        path: dist/windows
 
     - name: Generate artifact attestation for sdist and wheels
       uses: actions/attest-build-provenance@v1
