--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -61,14 +61,16 @@ jobs:
           path: ./wheelhouse/*.whl
 
   upload_all:
-    name: Upload if release
+    name: Upload release to PyPI
     needs: [build_wheels, build_sdist]
     runs-on: ubuntu-latest
-    if: github.ref == 'refs/heads/main'
-    environment: pypi
+    #if: github.ref == 'refs/heads/main'
+    #if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags')
+    environment:
+      name: testpypi #
+      url: https://pypi.org/p/cripser
     permissions:
       id-token: write
-      attestations: write
 
     steps:
     - uses: actions/setup-python@v5
@@ -93,11 +95,6 @@ jobs:
         name: wheels-windows-latest
         path: dist/windows
 
-    - name: Generate artifact attestation for sdist and wheels
-      uses: actions/attest-build-provenance@v1
-      with:
-        subject-path: "dist/*"
-
     - uses: pypa/gh-action-pypi-publish@release/v1
       with:
-        attestations: true
+        repository_url: https://test.pypi.org/legacy/
