--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -36,17 +36,21 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-latest, macos-latest, windows-latest]
+        os: [macos-latest] # [ubuntu-latest, macos-latest, windows-latest]
 
     steps:
       - uses: actions/checkout@v4
         with:
           submodules: true
 
-      - uses: astral-sh/setup-uv@v4
+      #- uses: astral-sh/setup-uv@v4
+      - uses: actions/setup-python@v5
+        with:
+          python-version: "3.x"
+
 
       - name: Build wheels
-        uses: pypa/cibuildwheel@v2.22
+        uses: pypa/cibuildwheel@v2.16.5
         env:
           CIBW_ARCHS_LINUX: auto
           CIBW_ARCHS_MACOS: x86_64 universal2 arm64
@@ -64,8 +68,7 @@ jobs:
     name: Upload release to PyPI
     needs: [build_wheels, build_sdist]
     runs-on: ubuntu-latest
-    #if: github.ref == 'refs/heads/main'
-    #if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags')
+    if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags')
     environment:
       name: testpypi #
       url: https://pypi.org/p/cripser
@@ -73,9 +76,9 @@ jobs:
       id-token: write
 
     steps:
-    - uses: actions/setup-python@v5
-      with:
-        python-version: "3.x"
+    # - uses: actions/setup-python@v5
+    #   with:
+    #     python-version: "3.x"
 
     - uses: actions/download-artifact@v4
       with:
@@ -84,16 +87,9 @@ jobs:
         path: dist
     - uses: actions/download-artifact@v4
       with:
-        name: wheels-ubuntu-latest
-        path: dist/ubuntu
-    - uses: actions/download-artifact@v4
-      with:
-        name: wheels-macos-latest
-        path: dist/macos
-    - uses: actions/download-artifact@v4
-      with:
-        name: wheels-windows-latest
-        path: dist/windows
+        pattern: wheels-*
+        merge-multiple: true
+        path: dist
 
     - uses: pypa/gh-action-pypi-publish@release/v1
       with:
