--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,9 +4,11 @@ on:
   workflow_dispatch:
   push:
     branches: [main, test-workflow]
+    tags:
+      - '*'
   pull_request:
     branches: [main, test-workflow]
-
+  
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
   cancel-in-progress: true
