--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,11 +3,9 @@ name: Build Wheels
 on:
   workflow_dispatch:
   push:
-    branches: [main, test-workflow]
+    #branches: [main, test-workflow]
     tags:
       - '*'
-  pull_request:
-    branches: [main, test-workflow]
   
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
@@ -38,7 +36,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [macos-latest] # [ubuntu-latest, macos-latest, windows-latest]
+        os: [ubuntu-latest, macos-latest, windows-latest]
 
     steps:
       - uses: actions/checkout@v4
@@ -72,8 +70,8 @@ jobs:
     runs-on: ubuntu-latest
     if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags')
     environment:
-      name: testpypi #
-      url: https://test.pypi.org/p/cripser/ # https://pypi.org/p/cripser
+      name: pypi #
+      url: https://pypi.org/p/cripser/ # https://pypi.org/p/cripser
     permissions:
       id-token: write
 
@@ -94,5 +92,5 @@ jobs:
         path: dist
 
     - uses: pypa/gh-action-pypi-publish@release/v1
-      with:
-        repository_url: https://test.pypi.org/legacy/
+      # with:
+      #   repository_url: https://test.pypi.org/legacy/
