--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,10 +16,9 @@ requires-python = ">=3.8"
 requires = [
   "setuptools>=68",
   "wheel",
-  "numpy>=1.23",
+  "numpy",
   # Optional but helpful so pip can provide a CMake/Ninja during build:
   "cmake>=3.21",
-  "ninja; platform_system != 'Windows'",
 ]
 build-backend = "setuptools.build_meta"
 
